# submitops-scout

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html
fixtures/: openai-build-week-packet.md  qwen-cloud-packet.md
reports/: openai-build-week-gpt56-payload.json  openai-build-week-submitops-scout.json  openai-build-week-submitops-scout.md
scripts/: render-openai-demo-video.sh
src/submitops_scout/: __init__.py  cli.py  core.py  gpt56_adapter.py  static_demo.py
submission/: openai-build-week-codex-credits-request.md  openai-build-week-demo-video-publication.md  openai-build-week-devpost-draft-access-recheck.md  openai-build-week-devpost-field-map.md  openai-build-week-devpost-registration-gate.md  openai-build-week-draft.md  openai-build-week-final-36-hour-codex-proof-boundary.md  openai-build-week-final-42-hour-proof-lock.md  openai-build-week-final-52-hour-submit-lock.md  openai-build-week-judge-quickstart-gate.md  openai-build-week-proof-boundary-gate.md  openai-build-week-public-url-verification-gate.md  openai-build-week-source-freshness-parse-gate.md  openai-build-week-static-demo-sandbox.md
tests/: test_core.py
