[project]
name = "submitops-scout"
version = "0.1.0"
description = "Codex-powered hackathon submission readiness scanner."
readme = "README.md"
authors = [
    { name = "memekr", email = "memekr@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
submitops-scout = "submitops_scout.cli:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001", "T201", "TC001", "TC003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.12"
